--- a/gerenciamento/Gerenciador/Gerenciador.csproj
+++ b/gerenciamento/Gerenciador/Gerenciador.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{67351FFC-74A5-405B-9A1F-F98EB9AB0273}</ProjectGuid>
+    <ProjectGuid>{297D115A-4A59-4E46-B17B-8FDD3DB7C001}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>gerenciamento</RootNamespace>
-    <AssemblyName>gerenciamento</AssemblyName>
+    <RootNamespace>Gerenciador</RootNamespace>
+    <AssemblyName>Gerenciador</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -45,14 +45,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="CLIENTE\CadastroCliente.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="CLIENTE\CadastroCliente.Designer.cs">
+      <DependentUpon>CadastroCliente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CLIENTE\Cliente.cs" />
+    <Compile Include="CLIENTE\Condominio.cs" />
+    <Compile Include="CLIENTE\Contato.cs" />
+    <Compile Include="FUNCIONARIO\Funcionario.cs" />
+    <Compile Include="PRODUTOS\Produto.cs" />
+    <Compile Include="SERVICOS\Servico.cs" />
+    <Compile Include="USUARIO\Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="USUARIO\Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="CLIENTE\CadastroCliente.resx">
+      <DependentUpon>CadastroCliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="USUARIO\Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -75,5 +93,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
