alteraçoes clientes e contatos

--- a/gerenciamento/Gerenciador/App.config
+++ b/gerenciamento/Gerenciador/App.config
@@ -6,6 +6,9 @@
         <add name="Gerenciador.Properties.Settings.DataBaseConnectionString"
             connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\DataBase.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="Gerenciador.Properties.Settings.DatabaseBDConnectionString"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\DatabaseBD.mdf;Integrated Security=True;Connect Timeout=30"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
