logo para teste

--- a/gerenciamento/Gerenciador/Gerenciador.csproj
+++ b/gerenciamento/Gerenciador/Gerenciador.csproj
@@ -290,7 +290,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\logo.png" />
+    <None Include="Resources\logo1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
