--- a/gerenciamento/Gerenciador/Gerenciador.csproj
+++ b/gerenciamento/Gerenciador/Gerenciador.csproj
@@ -94,11 +94,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="USUARIO\Menu.cs">
+    <Compile Include="USUARIO\menu.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="USUARIO\Menu.Designer.cs">
-      <DependentUpon>Menu.cs</DependentUpon>
+    <Compile Include="USUARIO\menu.Designer.cs">
+      <DependentUpon>menu.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="CLIENTE\CadastroCliente.resx">
       <DependentUpon>CadastroCliente.cs</DependentUpon>
@@ -119,8 +119,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="USUARIO\Menu.resx">
-      <DependentUpon>Menu.cs</DependentUpon>
+    <EmbeddedResource Include="USUARIO\menu.resx">
+      <DependentUpon>menu.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Connected Services\CorreiosService\AtendeClienteService.wsdl" />
     <None Include="Connected Services\CorreiosService\Gerenciador.CorreiosService.atualizaPagamentoNaEntregaResponse.datasource">
